# winjumantokenizer

./: Readme.md  pyproject.toml  requirements.txt
winjumantokenizer/: __init__.py  berttokenizer.py  juman.py
