[project]
name = "winjumantokenizer"
version = "0.0.1"

[tool.poetry]
name = "winjumantokenizer"
version = "0.0.1"
description = ""
authors = ["Masahiro Suzuki <msuzuki9609@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "winjumantokenizer", from = "" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true